Hooked the web project into the business Logic. Created some unit and integration tests to prove it all works.

--- a/SampleBioinformatics.Web/app/templates/_index.html
+++ b/SampleBioinformatics.Web/app/templates/_index.html
@@ -1,3 +1,5 @@
 ﻿<div ui-view class="dashboard">
     <h2>Sample Bioinformatics Home Page</h2>
+    <button ng-click="index.success()" type="submit" class="btn" id="success">Click to Succeed</button>
+    <p id="response">{{index.response}}</p>
 </div>
