Connected the website to the web API.  The site will now display the raw Json from decoding the DNA

--- a/SampleBioinformatics.Web/app/templates/_index.html
+++ b/SampleBioinformatics.Web/app/templates/_index.html
@@ -2,4 +2,7 @@
     <h2>Sample Bioinformatics Home Page</h2>
     <button ng-click="index.success()" type="submit" class="btn" id="success">Click to Succeed</button>
     <p id="response">{{index.response}}</p>
+    <p>DNA: <input type="text" name="DNA" ng-model="index.dna" /></p>
+    <button ng-click="index.decodeDNA()" type="submit" class="btn" id="decodeBtn">Click to Decode DNA</button>
+    <p id="decodedInfo">{{index.decodedInfo}}</p>
 </div>
