Removed all the ReturnSuccess functionality because there is no actual business logic being piped through from the BL to the UI.

--- a/SampleBioinformatics.Web/app/templates/_index.html
+++ b/SampleBioinformatics.Web/app/templates/_index.html
@@ -1,7 +1,5 @@
 ﻿<div ui-view class="dashboard">
-    <h2>Sample Bioinformatics Home Page</h2>
-    <button ng-click="index.success()" type="submit" class="btn" id="success">Click to Succeed</button>
-    <p id="response">{{index.response}}</p>
+    <h2 id="title">Sample Bioinformatics Home Page</h2>
     <p>DNA: <input type="text" name="DNA" ng-model="index.dna" /></p>
     <button ng-click="index.decodeDNA()" type="submit" class="btn" id="decodeBtn">Click to Decode DNA</button>
     <p id="decodedInfo">{{index.decodedInfo}}</p>
