--- a/SampleBioinformatics.Web/app/templates/_index.html
+++ b/SampleBioinformatics.Web/app/templates/_index.html
@@ -3,4 +3,7 @@
     <p>DNA: <input type="text" name="DNA" ng-model="index.dna" /></p>
     <button ng-click="index.decodeDNA()" type="submit" class="btn" id="decodeBtn">Click to Decode DNA</button>
     <p id="decodedInfo">{{index.decodedInfo}}</p>
+    <p id="mRNA">{{index.mRNA}}</p>
+    <p id="tRNA">{{index.tRNA}}</p>
+    <p id="aminoAcids">{{index.aminoAcids}}</p>
 </div>
