--- a/SampleBioinformatics.Web/app/templates/_index.html
+++ b/SampleBioinformatics.Web/app/templates/_index.html
@@ -2,8 +2,9 @@
     <div>
         <div class="form-group">
             <label class="col-md-2 control-label text-right" for="dna">DNA</label>
-            <div class="col-md-10">
+            <div class="col-md-10" ng-class="{'has-error': index.error}">
                 <input id="dna" class="form-control" name="DNA" ng-model="index.dna" type="text">
+                <span id="error" class="help-block" ng-show="index.error">{{index.errorMessage}}</span>
             </div>
         </div>
         <div class="col-md-offset-2 col-md-10" style="padding-top: 2px">
